--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -98,4 +98,7 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
+  <data name="_Please_direct_me_to_a_folder_" xml:space="preserve">
+    <value>Please direct me to a folder where I can store my memory.</value>
+  </data>
 </root>
